# docstring-ai

./: .env.template  .gitignore  LICENSE  README.md  datacontext_summary.json  datadocstring_cache.json  mkdocs.yml  project.toml  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: docstring-ai  docstring-ai.yml  generate-docs.yml  publish-to-pypi.yml  update-pyproject-with-vertion.yml
docs/: chroma.md  config.md  gh_utils.md  index.md  llm_utils.md  process.md  utils.md
docstring_ai/: __init__.py  __main__.py
docstring_ai/lib/: chroma_utils.py  config.py  docstring_utils.py  github_utils.py  llm_utils.py  logger.py  process.py  prompt_utils.py  utils.py
docstring_ai/src/: __init__.py  chroma_utils.py  docstring_utils.py  github_utils.py  process.py  prompt_utils.py  utils.py
